--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,5 +35,9 @@
         android:id="@+id/the_list"
         android:layout_width="match_parent"
         android:layout_height="360dp"></ListView>
-
+<Button
+    android:text="Add Word"
+    android:onClick="AddNewWordToFile"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
 </LinearLayout>
